--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 PORT=3000
+JWT_SECRET=uride
+POSTGRES_USER=docker
+POSTGRES_PASSWORD=docker
+POSTGRES_DB=uride
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?schema=public"
