--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ JWT_SECRET=uride
 POSTGRES_USER=docker
 POSTGRES_PASSWORD=docker
 POSTGRES_DB=uride
+FRONTEND_URL=http://localhost:5173
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?schema=public"
